feat: add JWT (#15)
